# libhybris

common/: Makefile.am  wrapper_code.h  wrapper_code_generic_arm.c
common/mm/: dlfcn.cpp
compat/surfaceflinger/: Android.mk  main_surfaceflinger.cpp  surfaceflinger.patch
debian/: changelog
hybris/: Makefile.am  configure.ac
hybris/common/: Makefile.am  hooks.c  hooks_shm.c  wrappers.c  wrappers.h
hybris/common/jb/: dlfcn.c
hybris/common/legacy_properties/: properties.c
hybris/common/mm/: debugger.cpp  dlfcn.cpp  hybris_compat.h  linker.cpp  linker.h  linker_allocator.h  linker_dlfcn.cpp  linker_memory.cpp
hybris/common/mm/bionic/libc/private/: libc_logging.h
hybris/common/n/: dlfcn.cpp
hybris/common/n/bionic/libc/include/: dlfcn.h  link.h
hybris/common/n/bionic/libc/private/: libc_logging.h
hybris/common/o/: dlfcn.cpp  hybris_compat.cpp  hybris_compat.h
hybris/common/o/bionic/libc/include/: dlfcn.h
hybris/egl/: egl.c  ws.c  ws.h
hybris/glesv3/: Makefile.am  glesv3.c
hybris/include/: Makefile.am
hybris/include/hybris/common/: musl_compat.h
hybris/include/hybris/surfaceflinger/: surfaceflinger_compatibility_layer_capabilities.h
hybris/libsync/: sync.c
hybris/surfaceflinger/: Makefile.am  libsurfaceflinger.pc.in  surfaceflinger.c
hybris/tests/: Makefile.am  test_camera.c  test_gps.c  test_hwcomposer.cpp  test_hwcomposer_inc.c  test_surfaceflinger.c
rpm/: libhybris.spec
utils/: extract-headers.sh
